Fixed: navbar on mainpage and modals. Added : Z-index to layer ontop of map

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,7 @@
         width: 100%;
         height: 100%;
         margin-top: 1px;
+        z-index: 1;
     }
 
     .icons {
