--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -50,7 +50,7 @@ body {
     position: absolute;
     right: 100px;
     top: 0;
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .topnav img {
@@ -73,7 +73,7 @@ body {
   .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     padding-top: 100px;
     left: 0;
     top: 0;
@@ -95,8 +95,8 @@ body {
   .close {
     color: #aaaaaa;
     position: absolute;
-    top: 100;
-    right: 100;
+    top: 100px;
+    right: 100px;
     font-size: 28px;
     font-weight: bold;
   }
@@ -111,7 +111,7 @@ body {
   .modal2 {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     padding-top: 100px;
     left: 0;
     top: 0;
@@ -132,7 +132,9 @@ body {
 
   .close2 {
     color: #aaaaaa;
-    float: right;
+    position: absolute;
+    top: 100px;
+    right: 100px;
     font-size: 28px;
     font-weight: bold;
   }
@@ -167,4 +169,26 @@ body {
   color: white;
   height: 35px;
   width: 125px;
+}
+
+@media only screen and (max-width: 800px) {
+  #searchButton {
+    border: none;
+    background-color: #151788;
+    color: white;
+    height: 35px;
+    width: 75%;
+    font-size: 25px;
+  }
+
+  .close{
+    position: absolute;
+    top: 100px;
+    right: 50px;
+  }
+
+  .close2{
+    position: absolute;
+    right:50px;
+  }
 }
